fix the authenticate route problem

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,8 +8,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "types/index.d.ts"],
   "exclude": ["node_modules"]
 }
